--- a/index.html
+++ b/index.html
@@ -1,67 +1,38 @@
-<!--This webpage is for the introduction of drama-->
-
 <!DOCTYPE html>
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
-    <link href="my_website.css" rel="stylesheet">
-    <title>Let's go to Seoul, Korea!</title>
+    <link href="index.css" rel="stylesheet">
+    <title>My Own Website</title>
   </head>
   <body>
-    <h1><span class="red">My trip</span> to <span class="blue">Seoul, Korea</span> !</h1>
-    <p>
-      As a kpop girl, I always wanted to go to Seoul with my friends.
-      since I was 9th grade, I have started to watch k-dramas and listen to kpop.
-      Kpop always cheers people up because of its exciting rhythm and cool dancing.
-      Also, my friends really like cosmetics from Korea.
-      Thus, travelling to Korea became our dreams.
-    </p>
-    <p>
-      After graduating from high school, my friends and I decided to go to Seoul by ourselves.
-      The dream from 9th grade finally came true.
-      We planned for a long time and eventually booked the ticket and started our journey!
-    </p>
-    <section id="first-day">
-      <h2>- - - <span class="red">First day</span> in <span class="blue">Seoul</span> - - -</h2>
-      <article>
-        <h3>TIRING STAIRS...</h3>
-        <p>
-          After arriving in Seoul, we went to our hostel immediately.
-          The thing that really shocked me was that some exit for the subway station didn't have eccelator.
-          We needed to carry our own laugage and climb up the stairs.
-          It was so tired that I couldn't forget it.
-        </p>
-      </article>
-
-      <article>
-        <h3>FIRST MEAL IN SEOUL!</h3>
-        <div id="first-meal">
-          <img src="img/IMG_3209 壓縮.jpg" alt="A picture of Sinseon Seolnongtang">
-          <div id="first-meal-text">
-            <span id="text-one">
-              After checking in our room, it was almost dinner time.
-              We lived close to Myeong-dong, so our first meal in Seoul was Sinseon Seolnongtang in Myeong-dong.
-            </span>
-            <hr>
-            <span id="text-two">
-              It was good but too light for me. You can taste milk when you eat and the rice in it is really soft.
-              The portion is kind of big but it's not expensive.
-            </span>
-          </div>
-        </div>
-      </article>
-
-      <article>
-        <h3>MYEONG-DONG SHOPPING AREA XD</h3>
-        <p>
-          After dinner, we went to shopping. Myeong-dong is a place where gathers many different things.
-          You can find cosmetics, food, snacks, clothes, even book stores here.
-          It was really tiring after climbing up the stairs with our suitcases,
-          but we still went shopping until 11 pm that night.
-        </p>
-      </article>
-    </section>
+    <h1>WELCOME TO MY WEBSITE!</h1>
+    <aside>
+      <ul>Info of ME!</ul>
+      <ul>Korea</ul>
+    </aside>
+    <main>
+      <h2>Info of ME!</h2>
+      <div id="personal-info">
+        <img alt="selfie">
+        <article>
+          <li>Name: Christina Kuo</li>
+          <li>Where I'm from: Taiwan</li>
+          <li>School: University of Washington Sophmore</li>
+          <li>Intended major:
+              Computer Science / Informatics / Human Centered Design & Engineering</li>
+        </article>
+      </div>
+      <div id="more-info">
+        <li>Personality: Although I'm a shy person,
+            I still like to make friends and meet people from different places.</li>
+        <li>What I like: Travel, building websites, playing video games, coding
+            and editing videos.</li>
+        <li>Language: My first language is Mandirine, and second is English.</li>
+        <li>My dream: I hope I can become a software engineering
+            and develop an app or a video game!</li>
+      </div>
+      <p>Hope you enjoy my website!</p>
+    </main>
   </body>
-  <footer>
-  </footer>
 </html>
