--- a/index.html
+++ b/index.html
@@ -10,24 +10,29 @@
     <h1>WELCOME TO MY WEBSITE!</h1>
 
     <div id="personal-info">
+
       <aside>
         <span id="more-pages">See more pages:</span>
         <li><a href="index.html">Info of ME!</a></li>
         <li><a href="korea_first.html">Korea</a></li>
       </aside>
+
       <div id="info-of-me">
-        <h2>Info of ME!</h2>
-        <div>
-          <img alt="photo of me">
+        <h2>- - - <span id="red">Info</span> of <span id="blue">ME</span> - - -</h2>
+        <div id="img-and-info">
+          <img src="img/IMG_8062.JPG" alt="photo of me">
           <article>
             <li>Name: Christina Kuo</li>
             <li>Where I'm from: Taiwan</li>
             <li>School: University of Washington Sophmore</li>
-            <li>Intended major:
-                Computer Science / Informatics / Human Centered Design & Engineering</li>
+            <li>Intended major:</li>
+            <div class="list">1. Computer Science</div>
+            <div class="list">2. Informatics</div>
+            <div class="list">3. Human Centered Design & Engineering</div>
           </article>
         </div>
       </div>
+
     </div>
 
     <div id="more-info">
@@ -35,7 +40,7 @@
           I still like to make friends and meet people from different places.</li>
        <li>What I like: Travel, building websites, playing video games, coding
           and editing videos.</li>
-      <li>Language: My first language is Mandirine, and second is English.</li>
+      <li>Language: My first language is Mandarin, and second is English.</li>
       <li>My dream: I hope I can become a software engineering
           and develop an app or a video game!</li>
     </div>
