--- a/korea_first.html
+++ b/korea_first.html
@@ -51,7 +51,7 @@
         </div>
       </article>
 
-      <article>
+      <article id="shopping">
         <h3>MYEONG-DONG SHOPPING AREA XD</h3>
         <p>
           After dinner, we went to shopping. Myeong-dong is a place where gathers many different things.
