--- a/korea_second.html
+++ b/korea_second.html
@@ -39,14 +39,13 @@
 
       <article>
         <h3>MUST GO - SEOUL TOWER!</h3>
-        <div id="tower-img">
+        <div id="tower-img-one">
           <img src="img/korea 2/IMG_0310.jpg">
-          <img src="img/korea 2/IMG_6176.jpg">
-          <img src="img/korea 2/IMG_1581.JPG">
           <img src="img/korea 2/IMG_4659.jpg">
           <img src="img/korea 2/IMG_4656.jpg">
+          <img src="img/korea 2/IMG_1581.JPG">
         </div>
-        <p>
+        <p id="tower-text">
           After having lunch, we went to the landmark of Seoul - Seoul Tower!
           I really wanted to go to Seoul Tower because of its beutiful sight!
           Also, many K-drama were filmed at the tower.
