--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="index.html">Info of ME!</a></li>
         <li><a href="korea_first.html">Seoul Day 1</a></li>
         <li><a href="korea_second.html">Seoul Day 2</a></li>
+        <li><a href="korea_third.html">Seoul Day 3</a></li>
       </aside>
 
       <div id="info-of-me">
