--- a/korea_second.html
+++ b/korea_second.html
@@ -77,6 +77,6 @@
   <footer>
     <p><a href="korea_first.html">&larr; Go back to First day in Seoul</a></p>
     <p><a href="index.html">Go back to main (info) page</a></p>
-    <p>Go to Third day in Seoul &rarr;</a></p>
+    <p><a href="korea_third.html">Go to Third day in Seoul &rarr;</a></p>
   </footer>
 </html>
