--- a/korea_third.html
+++ b/korea_third.html
@@ -68,7 +68,7 @@
     <footer>
       <p><a href="korea_second.html">&larr; Go back to Second day in Seoul</a></p>
       <p><a href="index.html">Go back to main (info) page</a></p>
-      <p>Go to Fourth day in Seoul &rarr;</a></p>
+      <!--<p>Go to Fourth day in Seoul &rarr;</a></p>-->
     </footer>
   </body>
 </html>
